--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Minecraft integration with Flarum",
     "type": "flarum-extension",
     "require": {
-        "flarum/core": ">=0.1.0-beta.16 <0.1.0-beta.17"
+        "flarum/core": "^1.0"
     },
     "autoload": {
         "psr-4": {"Samerton\\FlarumMinecraft\\": "src/"}
